--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -128,7 +128,7 @@
     "editor.inlayHints.fontFamily": "JetBrains Mono",
     "editor.inlineSuggest.enabled": true,
     "editor.insertSpaces": true,
-    "editor.lightbulb.enabled": false,
+    "editor.lightbulb.enabled": "off",
     "editor.linkedEditing": true,
     "editor.minimap.maxColumn": 100,
     "editor.parameterHints.enabled": false,
@@ -313,6 +313,6 @@
     "[php]": {
         "editor.defaultFormatter": "bmewburn.vscode-intelephense-client"
     },
-    "window.title": "totality",
+    "window.title": "laravel-model-caching",
     "workbench.editor.tabActionLocation": "left"
 }
