--- a/composer.json
+++ b/composer.json
@@ -29,10 +29,10 @@
         "doctrine/dbal": "^3.3",
         "fakerphp/faker": "^1.11",
         "laravel/nova": "^4.0",
-        "orchestra/testbench-browser-kit": "^8.0",
-        "orchestra/testbench": "^8.0|^9.0",
+        "orchestra/testbench-browser-kit": "^9.0",
+        "orchestra/testbench": "^9.0",
         "php-coveralls/php-coveralls": "^2.2",
-        "phpunit/phpunit": "^10.0",
+        "phpunit/phpunit": "^10.5",
         "slevomat/coding-standard": "^7.0|^8.14",
         "squizlabs/php_codesniffer": "^3.6",
         "symfony/thanks": "^1.2",
