--- a/composer.json
+++ b/composer.json
@@ -17,22 +17,22 @@
     "require": {
         "php": ">=8.1",
         "genealabs/laravel-pivot-events": "^10.0|^11.0",
-        "illuminate/cache": "^10.0|^11.0",
-        "illuminate/config": "^10.0|^11.0",
-        "illuminate/console": "^10.0|^11.0",
-        "illuminate/container": "^10.0|^11.0",
-        "illuminate/database": "^10.0|^11.0",
-        "illuminate/http": "^10.0|^11.0",
-        "illuminate/support": "^10.0|^11.0"
+        "illuminate/cache": "^10.0|^11.0|^12.0",
+        "illuminate/config": "^10.0|^11.0|^12.0",
+        "illuminate/console": "^10.0|^11.0|^12.0",
+        "illuminate/container": "^10.0|^11.0|^12.0",
+        "illuminate/database": "^10.0|^11.0|^12.0",
+        "illuminate/http": "^10.0|^11.0|^12.0",
+        "illuminate/support": "^10.0|^11.0|^12.0"
     },
     "require-dev": {
-        "doctrine/dbal": "^3.3",
+        "doctrine/dbal": "^3.3|^4.2",
         "fakerphp/faker": "^1.11",
         "laravel/nova": "^4.0",
-        "orchestra/testbench-browser-kit": "^9.0",
-        "orchestra/testbench": "^9.0",
+        "orchestra/testbench-browser-kit": "^9.0|^10.0",
+        "orchestra/testbench": "^9.0|^10.0",
         "php-coveralls/php-coveralls": "^2.2",
-        "phpunit/phpunit": "^10.5",
+        "phpunit/phpunit": "^10.5|^11.5.3",
         "slevomat/coding-standard": "^7.0|^8.14",
         "squizlabs/php_codesniffer": "^3.6",
         "symfony/thanks": "^1.2",
