--- a/composer.json
+++ b/composer.json
@@ -12,10 +12,6 @@
         {
             "type": "composer",
             "url": "https://nova.laravel.com"
-        },
-        {
-            "type": "vcs",
-            "url": "git@github.com:mikebronner/development-settings.git"
         }
     ],
     "require": {
@@ -30,23 +26,17 @@
         "illuminate/support": "^10.0|^11.0|^12.0"
     },
     "require-dev": {
-        "barryvdh/laravel-debugbar": "^3.15",
-        "barryvdh/laravel-ide-helper": "^3.5",
         "doctrine/dbal": "^3.3|^4.2",
         "fakerphp/faker": "^1.11",
-        "larastan/larastan": "^3.5",
-        "laravel/boost": "^2.0",
-        "laravel/legacy-factories": "^1.3",
         "laravel/nova": "^5.0",
-        "laravel/pint": "^1.24",
-        "mikebronner/development-settings": "*",
-        "orchestra/testbench": "^9.0|^10.0",
         "orchestra/testbench-browser-kit": "^9.0|^10.0",
+        "orchestra/testbench": "^9.0|^10.0",
         "php-coveralls/php-coveralls": "^2.2",
         "phpunit/phpunit": "^10.5|^11.5.3",
         "slevomat/coding-standard": "^7.0|^8.14",
         "squizlabs/php_codesniffer": "^3.6",
-        "symfony/thanks": "^1.2"
+        "symfony/thanks": "^1.2",
+        "laravel/legacy-factories": "^1.3"
     },
     "autoload": {
         "psr-4": {
@@ -74,8 +64,7 @@
     "config": {
         "allow-plugins": {
             "symfony/thanks": true,
-            "dealerdirect/phpcodesniffer-composer-installer": true,
-            "mikebronner/development-settings": true
+            "dealerdirect/phpcodesniffer-composer-installer": true
         }
     }
 }
