--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,6 @@
     "require-dev": {
         "doctrine/dbal": "^3.3|^4.2",
         "fakerphp/faker": "^1.11",
-        "laravel/nova": "^5.0",
         "orchestra/testbench-browser-kit": "^9.0|^10.0",
         "orchestra/testbench": "^9.0|^10.0",
         "php-coveralls/php-coveralls": "^2.2",
@@ -36,7 +35,10 @@
         "slevomat/coding-standard": "^7.0|^8.14",
         "squizlabs/php_codesniffer": "^3.6",
         "symfony/thanks": "^1.2",
-        "laravel/legacy-factories": "^1.3"
+        "laravel/legacy-factories": "^1.3",
+        "larastan/larastan": "^2.0|^3.0",
+        "laravel/pint": "^1.27",
+        "laravel/nova": "^5.0"
     },
     "autoload": {
         "psr-4": {
