--- a/composer.json
+++ b/composer.json
@@ -16,25 +16,25 @@
     ],
     "require": {
         "php": ">=8.2",
-        "mikebronner/laravel-pivot-events": "^10.0|^11.0|^12.0",
-        "illuminate/cache": "^10.0|^11.0|^12.0|^13.0",
-        "illuminate/config": "^10.0|^11.0|^12.0|^13.0",
-        "illuminate/console": "^10.0|^11.0|^12.0|^13.0",
-        "illuminate/container": "^10.0|^11.0|^12.0|^13.0",
-        "illuminate/database": "^10.0|^11.0|^12.0|^13.0",
-        "illuminate/http": "^10.0|^11.0|^12.0|^13.0",
-        "illuminate/support": "^10.0|^11.0|^12.0|^13.0"
+        "mikebronner/laravel-pivot-events": "^11.0|^12.0|^13.0",
+        "illuminate/cache": "^11.0|^12.0|^13.0",
+        "illuminate/config": "^11.0|^12.0|^13.0",
+        "illuminate/console": "^11.0|^12.0|^13.0",
+        "illuminate/container": "^11.0|^12.0|^13.0",
+        "illuminate/database": "^11.0|^12.0|^13.0",
+        "illuminate/http": "^11.0|^12.0|^13.0",
+        "illuminate/support": "^11.0|^12.0|^13.0"
     },
     "require-dev": {
         "doctrine/dbal": "^3.3|^4.2",
         "fakerphp/faker": "^1.11",
         "laravel/nova": "^5.0",
-        "orchestra/testbench-browser-kit": "^9.0|^10.0",
-        "orchestra/testbench": "^9.0|^10.0|^11.0",
+        "orchestra/testbench-browser-kit": "^11.0",
+        "orchestra/testbench": "^11.0",
         "php-coveralls/php-coveralls": "^2.2",
-        "phpunit/phpunit": "^10.5|^11.5.3|^12.5.12",
-        "slevomat/coding-standard": "^7.0|^8.14",
-        "squizlabs/php_codesniffer": "^3.6|^4.0",
+        "phpunit/phpunit": "^12.5.12",
+        "slevomat/coding-standard": "^8.14",
+        "squizlabs/php_codesniffer": "^4.0",
         "symfony/thanks": "^1.2",
         "laravel/legacy-factories": "^1.3|dev-master"
     },
