--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,7 @@
-# -----------------
-# Laravel Artifacts
-# -----------------
-/.phpunit.cache
+.idea
 .phpunit.result.cache
-/.laravel-lsp
-/node_modules
-/public/build
-/public/hot
-/public/storage
-/storage/*.key
+/.phpunit*
+/build
 /vendor
 composer.lock
 .ai
