fix(builder): address review feedback on custom builder composition
- Add macroKey tracking in __call for inner builder methods to prevent
  cache key collisions between different custom builder methods (AC3)
- Document __call precedence: inner builder wins over scopes
- Add reflection fragility comments with Laravel version notes
- Add syncStateToInner() docblock explaining shared $query object
- Deprecate ModelCaching::useEloquentBuilder() — CachedBuilder now
  extends Builder directly; custom builders use newEloquentBuilder()

--- a/composer.json
+++ b/composer.json
@@ -37,8 +37,7 @@
         "symfony/thanks": "^1.2",
         "laravel/legacy-factories": "^1.3",
         "larastan/larastan": "^2.0|^3.0",
-        "laravel/pint": "^1.27",
-        "laravel/nova": "^5.0"
+        "laravel/pint": "^1.27"
     },
     "autoload": {
         "psr-4": {
