--- a/composer.json
+++ b/composer.json
@@ -28,15 +28,13 @@
     "require-dev": {
         "doctrine/dbal": "^3.3|^4.2",
         "fakerphp/faker": "^1.11",
-        "laravel/nova": "^5.0",
-        "orchestra/testbench-browser-kit": "^9.0|^10.0",
+        "laravel/nova": "^5.0|^6.0",
+        "orchestra/testbench-browser-kit": "^9.0|^10.0|^11.0",
         "orchestra/testbench": "^9.0|^10.0|^11.0",
-        "php-coveralls/php-coveralls": "^2.2",
         "phpunit/phpunit": "^10.5|^11.5.3|^12.5.12",
         "slevomat/coding-standard": "^7.0|^8.14",
         "squizlabs/php_codesniffer": "^3.6|^4.0",
-        "symfony/thanks": "^1.2",
-        "laravel/legacy-factories": "^1.3|dev-master"
+        "symfony/thanks": "^1.2"
     },
     "autoload": {
         "psr-4": {
@@ -45,11 +43,11 @@
     },
     "autoload-dev": {
         "classmap": [
-            "tests/database/factories",
             "tests/database/seeds"
         ],
         "psr-4": {
-            "GeneaLabs\\LaravelModelCaching\\Tests\\": "tests/"
+            "GeneaLabs\\LaravelModelCaching\\Tests\\": "tests/",
+            "GeneaLabs\\LaravelModelCaching\\Tests\\Database\\Factories\\": "tests/database/factories/"
         }
     },
     "extra": {
