--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -14,9 +14,11 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        php: ['8.2', 8.3', '8.4', '8.5']
+        php: ['8.2', '8.3', '8.4', '8.5']
         laravel: ['11.*', '12.*', '13.*']
         exclude:
+          - php: '8.5'
+            laravel: '11.*'
           - php: '8.2'
             laravel: '13.*'
 
