--- a/composer.json
+++ b/composer.json
@@ -28,25 +28,14 @@
     "require-dev": {
         "doctrine/dbal": "^3.3|^4.2",
         "fakerphp/faker": "^1.11",
-<<<<<<< HEAD
-        "orchestra/testbench-browser-kit": "^9.0|^10.0",
-        "orchestra/testbench": "^9.0|^10.0",
-        "php-coveralls/php-coveralls": "^2.2",
-        "phpunit/phpunit": "^10.5|^11.5.3",
-        "slevomat/coding-standard": "^7.0|^8.14",
-        "squizlabs/php_codesniffer": "^3.6",
-        "symfony/thanks": "^1.2",
-        "laravel/legacy-factories": "^1.3",
         "larastan/larastan": "^2.0|^3.0",
-        "laravel/pint": "^1.27"
-=======
         "laravel/nova": "^5.0|^6.0",
+        "laravel/pint": "^1.27",
         "orchestra/testbench": "^9.0|^10.0|^11.0",
         "phpunit/phpunit": "^10.5|^11.5.3|^12.5.12",
         "slevomat/coding-standard": "^7.0|^8.14",
         "squizlabs/php_codesniffer": "^3.6|^4.0",
         "symfony/thanks": "^1.2"
->>>>>>> origin/master
     },
     "autoload": {
         "psr-4": {
